fix: overflow and scroll

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -573,6 +573,10 @@ video {
   visibility: hidden;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -589,6 +593,22 @@ video {
   top: 90%;
 }
 
+.top-\[95\%\] {
+  top: 95%;
+}
+
+.top-\[105\%\] {
+  top: 105%;
+}
+
+.top-\[200\%\] {
+  top: 200%;
+}
+
+.top-\[500\%\] {
+  top: 500%;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -601,6 +621,10 @@ video {
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.inline {
+  display: inline;
 }
 
 .flex {
@@ -627,12 +651,16 @@ video {
   height: auto;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
 .h-full {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-\[24px\] {
@@ -641,6 +669,10 @@ video {
 
 .w-\[46px\] {
   width: 46px;
+}
+
+.w-auto {
+  width: auto;
 }
 
 .w-screen {
@@ -679,8 +711,8 @@ video {
   align-self: center;
 }
 
-.overflow-clip {
-  overflow: clip;
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .text-pretty {
@@ -691,9 +723,9 @@ video {
   border-radius: 0.75rem;
 }
 
-.bg-\[\#00453D\] {
+.bg-dark-green {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 69 61 / var(--tw-bg-opacity));
+  background-color: rgb(var(--dark-green) / var(--tw-bg-opacity));
 }
 
 .bg-green {
@@ -708,11 +740,6 @@ video {
 
 .bg-transparent {
   background-color: transparent;
-}
-
-.bg-dark-green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(var(--dark-green) / var(--tw-bg-opacity));
 }
 
 .stroke-green {
@@ -859,11 +886,6 @@ video {
 
 .dark\:outline-white:where(.dark, .dark *) {
   outline-color: #FFFFFF;
-}
-
-.dark\:focus\:bg-\[\#2F2F2F\]:focus:where(.dark, .dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(47 47 47 / var(--tw-bg-opacity));
 }
 
 .dark\:focus\:bg-light-grey:focus:where(.dark, .dark *) {
